# orchestrator

./: README.md
commander-demo/: .env.example  .gitignore  Makefile
commander-demo/.github/workflows/: ci.yml
commander-demo/backend/: README.md  pyproject.toml
commander-demo/backend/scripts/: test_chat.py
commander-demo/backend/src/commander/: __init__.py  main.py  settings.py
commander-demo/backend/src/commander/api/: __init__.py  http.py  ws.py
commander-demo/backend/src/commander/core/: __init__.py  constraints.py  logging.py  models.py  orchestrator.py  playbook.py  validator.py
commander-demo/backend/src/commander/llm/: __init__.py  agent.py  gemini_client.py  prompts.py
commander-demo/backend/src/commander/sim/: __init__.py  controllers.py  mujoco_world.py  platforms.py  renderer.py
commander-demo/backend/src/commander/sim/assets/: world.xml
commander-demo/backend/tests/: test_agent.py  test_constraints.py  test_orchestrator.py  test_validator.py
commander-demo/docs/: 00_overview.md  01_prd.md  02_demo_script.md  03_playbook.md  04_schemas.md  05_safety_constraints.md  06_architecture.md  07_api.md  08_logging_replay.md  09_backlog.md
commander-demo/frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
commander-demo/frontend/src/: App.css  App.tsx  api.ts  index.css
commander-demo/frontend/src/components/: ChatPanel.css  ChatPanel.tsx  MiniMap.css  MiniMap.tsx  PlatformCards.css  PlatformCards.tsx  SimView.css  SimView.tsx  Timeline.css  Timeline.tsx
